--- a/Changelog
+++ b/Changelog
@@ -29,6 +29,7 @@ version <next>:
 - AVS2 video encoder via libxavs2
 - amultiply filter
 - Block-Matching 3d (bm3d) denoising filter
+- acrossover filter
 
 
 version 4.0:
