--- a/Changelog
+++ b/Changelog
@@ -9,10 +9,9 @@ version <next>:
 - aderivative and aintegral audio filters
 - pal75bars and pal100bars video filter sources
 - support mbedTLS based TLS
-- DNN inference interface
-- Reimplemented SRCNN filter using DNN inference interface
 - adeclick filter
 - adeclip filter
+- libtensorflow backend for DNN based filters like srcnn
 
 
 version 4.0:
