avfilter/setpts: add FR shorthand for FRAME_RATE

--- a/doc/filters.texi
+++ b/doc/filters.texi
@@ -19392,7 +19392,7 @@ The expression is evaluated through the eval API and can contain the following
 constants:
 
 @table @option
-@item FRAME_RATE
+@item FRAME_RATE, FR
 frame rate, only defined for constant frame-rate video
 
 @item PTS
