lavc, doc, configure: add avs2 video decoder wrapper
Tested-by: Steven Liu <lq@chinaffmpeg.org>
Signed-off-by: hwren <hwrenx@126.com>
Signed-off-by: Steven Liu <lq@chinaffmpeg.org>

--- a/Changelog
+++ b/Changelog
@@ -16,6 +16,7 @@ version <next>:
 - ATRAC9 decoder
 - lensfun wrapper filter
 - colorconstancy filter
+- AVS2 video decoder via libdavs2
 
 
 version 4.0:
