--- a/Changelog
+++ b/Changelog
@@ -18,6 +18,7 @@ version <next>:
 - colorconstancy filter
 - AVS2 video decoder via libdavs2
 - IMM4 video decoder
+- Brooktree ProSumer video decoder
 
 
 version 4.0:
