avcodec: add MatchWare Screen Capture Codec

--- a/Changelog
+++ b/Changelog
@@ -19,6 +19,7 @@ version <next>:
 - AVS2 video decoder via libdavs2
 - IMM4 video decoder
 - Brooktree ProSumer video decoder
+- MatchWare Screen Capture Codec decoder
 
 
 version 4.0:
